samples/_failures_safe/1761697391_5ce09b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecb93f37.c: In function ‘main’:
./samples/SAFE/__tmp_ecb93f37.c:140:16: error: expected expression at end of input
  140 |                (float)level_counts[level] / log_count *
      |                ^
./samples/SAFE/__tmp_ecb93f37.c:140:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ecb93f37.c:140:16: error: expected declaration or statement at end of input
